--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Developers Cheatsheet" />
+    <meta name="description" content="Keyboard shortcuts you will actually use!" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>SHORTCUT🚀SPACE</title>
